fix x from being too high up

--- a/src/less/tappifications.less
+++ b/src/less/tappifications.less
@@ -85,7 +85,7 @@
 	.tappification-close {
 		position: absolute;
 		right: 15px;
-		top: 5px;
+		top: 0;
 		font-size: 20px;
 		&:hover {
 			opacity: @hover-dim;
